# volatility-forecasting

./: .gitignore  BACKTEST_FINDINGS.md  BACKTEST_PLAN.md  EVALUATION.md  README.md  STRATEGY.md  pipeline.toml  pyproject.toml
notebooks/: baselines_viz.ipynb  csp_etf_backtest.ipynb  dissertation_stats.ipynb  lightgbm_results.ipynb  methodology_figures.ipynb  nn_results.ipynb  overfitting_analysis.ipynb  preprocessing.ipynb  symbol_correlation.ipynb  vrp_analysis.ipynb  walk_forward_results.ipynb
prediction/: README.md  __init__.py  loghar.py  predict.py  train_lean.py
prediction/models/: loghar_coefs.json
prediction/tests/: test_predict.py
tests/: conftest.py  test_baselines.py  test_config.py  test_evaluation.py  test_filters.py  test_join.py  test_lightgbm.py  test_neural_models.py  test_preprocessing.py  test_trim.py  test_validate.py  test_walk_forward.py
theta/: config.py
theta/analysis/: vrp.py
theta/analysis/correlation/: __init__.py  correlation.py
theta/backtest/: __init__.py  cpcv.py  csp.py  csp_portfolio.py  data.py  level1.py  level1_5.py  level2.py  level2_csp.py  level2_csp_null.py  metrics.py  portfolio.py  signal.py  sizing.py  spreads.py
theta/backtest/directional/: __init__.py  exits.py  (+5 more)
theta/modeling/: __init__.py  baselines.py  evaluation.py  lightgbm_model.py  loghar_etf.py  neural_models.py  preprocessing.py  walk_forward.py
theta/processing/: __init__.py  compute_features.py  compute_iv.py  events.py  filters.py  iv.py  join.py  macro.py  option_features.py  panel.py  rates.py  rv.py  technical.py  trim.py  validate.py
